<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.uoc.android.restservice.ui.followers.UserFollowersActivity">

    <ProgressBar
        android:id="@+id/user_followers_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />

    <RelativeLayout
        android:id="@+id/user_followers_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/user_followers_profile_view"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/user_followers_profile_image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_margin="@dimen/default_margin" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_user_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/default_margin"
                    android:text="@string/user_email"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/user_followers_profile_repos_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/default_margin"
                    android:text="@string/user_followers_repositories"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/user_followers_profile_following_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/default_margin"
                    android:text="@string/user_followers_following"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_below="@+id/user_followers_profile_view"
            android:background="@android:color/darker_gray" />

        <TextView
            android:id="@+id/user_followers_title_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/user_followers_profile_view"
            android:gravity="center"
            android:text="@string/user_followers_title"
            android:textAllCaps="true"
            android:textSize="20sp"
            android:textStyle="bold" />

        <View
            android:id="@+id/user_followers_divider"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_below="@+id/user_followers_title_text"
            android:background="@android:color/darker_gray" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/user_followers_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/user_followers_divider"
            android:scrollbars="vertical"
            app:layoutManager="android.support.v7.widget.LinearLayoutManager" />
    </RelativeLayout>

    <TextView
        android:id="@+id/user_followers_error_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/user_followers_error"
        android:textSize="20sp"
        android:visibility="gone" />
</FrameLayout>
